--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <style>
+        @media screen and (max-width: 600px) {
+        p {
+            font-size: 15px;
+        }
+        .imgbear{
+            max-height: 10px;
+            max-width: 200px;
+            border-radius: 40px;
+        }
+        }
+
         body {
             margin: 0;
             display: flex;
@@ -29,7 +40,8 @@
         }
 
         p {
-            font-size: 30px;
+            font-size: 15px;
+            height: auto;
         }
 
         .button {
