--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="center-container">
     <div class="center-content">
         <img src="./cute-love-bear-roses-ou7zho5oosxnpo6k.gif" id="bearImage" alt="Centered Image" class="imgbear">
-        <p id="para">Will You be my Valentine's</p>
+        <p id="para">Will You be my Valentine's?</p>
         <button class="button" id="yesButton">Yes</button>
         <button class="button button-no" id="noButton">No</button>
     </div>
