--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             background-color: #f44336;
         }
     </style>
-    <title>Centered Div with Image</title>
+    <title>For gia</title>
 </head>
 <body>
 
